# monad-bft

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: fuzz.yml  publish.yaml  rust.yml  test-command.yml
docker/archive/: Dockerfile
docker/builder/: Dockerfile
docker/devnet/: Dockerfile  fullnode.Dockerfile
docker/gossip-testground/: Dockerfile
docker/rpc/: Dockerfile
docker/rpc-request-gen/: Dockerfile
docker/testground/: Dockerfile
docker/txgen/: Dockerfile
docs/: 0001_peer_discovery.md  0002_authenticated_udp.md  0003_forkpoint.md  peer_discovery.md
monad-archive/: .gitignore  Cargo.toml  README.md
monad-archive/src/: archive_reader.rs  cli.rs  lib.rs  metrics.rs  prelude.rs  rlp_offset_scanner.rs  test_utils.rs
monad-block-capture/: Cargo.toml  build.rs  wrapper.h
monad-block-capture/examples/: archivedump.rs  hexdump.rs
monad-block-capture/src/: block_archive.rs  ffi.rs  lib.rs
monad-block-persist/src/: lib.rs
monad-blocksync/: Cargo.toml
monad-blocksync/src/: blocksync.rs
monad-blocktree/src/: blocktree.rs
monad-bls/: Cargo.toml
monad-bls/src/: aggregation_tree.rs  bls.rs  lib.rs
monad-chain-config/: Cargo.toml
monad-chain-config/src/: execution_revision.rs  lib.rs  revision.rs  staking_config.rs
monad-compress/src/: util.rs
monad-consensus/: Cargo.toml
monad-consensus-types/: Cargo.toml
monad-cxx/: build.rs
monad-cxx/monad-cxx-env/: CMakeLists.txt
monad-cxx/monad-cxx-env/include/category/ffi/: cxx_env.h
monad-cxx/monad-cxx-env/src/: cxx_env.cpp
monad-dataplane/: Cargo.toml
monad-dataplane/examples/: node.rs  throughput.rs
monad-dataplane/src/: ban_expiry.rs  lib.rs  udp.rs
monad-dataplane/src/tcp/: mod.rs  rx.rs  tx.rs
monad-dataplane/tests/: address_family_mismatch.rs  tests.rs
monad-eth-block-policy/: Cargo.toml
monad-eth-block-validator/: Cargo.toml
monad-eth-ledger/: Cargo.toml
monad-eth-testutil/: Cargo.toml
monad-eth-txpool-executor/: Cargo.toml
monad-eth-txpool-ipc/: Cargo.toml
monad-eth-txpool-types/: Cargo.toml
monad-eth-types/: Cargo.toml
monad-ethcall/: Cargo.toml  build.rs
monad-event/: Cargo.toml  build.rs  wrapper.h
monad-event-capture/: Cargo.toml  build.rs  wrapper.h
monad-event-capture/benches/: capture_raw.rs
monad-event-capture/examples/: hexdump.rs
monad-event-capture/src/: ffi.rs  file.rs  lib.rs  reader.rs  result.rs
monad-event-capture/src/section/: iter.rs  mod.rs
monad-event-ring/: Cargo.toml  build.rs  wrapper.h
monad-event-source/: Cargo.toml
monad-exec-events/: Cargo.toml  build.rs
monad-exec-events-piql/: Cargo.toml
monad-exec-events-piql/src/: claude.rs  main.rs  piql_system_prompt.txt
monad-exec-events-piql/src/block_archive/: mod.rs  tx_header.rs
monad-exec-events-python/: Cargo.toml  pyproject.toml
monad-exec-events-python/python/monad_exec_events/: __init__.py  block_archive.py
monad-exec-events-python/src/: lib.rs
monad-exec-events-python/src/block_archive/: block_performance.rs  call_frames.rs  mod.rs  slot_updates.rs  tx_gas.rs  tx_header.rs  tx_performance.rs
monad-executor/: Cargo.toml
monad-executor-glue/: Cargo.toml
monad-fuzz/: .gitignore  Cargo.toml  run-quick.sh
monad-fuzz/fuzz_targets/: fuzz_deserialize.rs  fuzz_parse_message.rs  fuzz_parse_message_differential.rs  fuzz_raptor_decoder.rs
monad-keystore/: Cargo.toml  README.md
monad-mock-swarm/: Cargo.toml
monad-multi-sig/: Cargo.toml
monad-node/: Cargo.toml
monad-node-config/: Cargo.toml
monad-peer-disc-swarm/: Cargo.toml
monad-peer-discovery/: Cargo.toml
monad-raptorcast/: Cargo.toml
monad-raptorcast/benches/: encode_bench.rs  raptor_bench.rs
monad-raptorcast/examples/: latency.rs  service.rs
monad-raptorcast/src/: config.rs  decoding.rs  lib.rs  metrics.rs  udp.rs  util.rs
monad-raptorcast/src/auth/: metrics.rs  mod.rs  protocol.rs  socket.rs
monad-raptorcast/src/packet/: assembler.rs  assigner.rs  builder.rs  mod.rs
monad-raptorcast/src/parser/: legacy.rs  mod.rs  packet_parser.rs
monad-raptorcast/src/raptorcast_secondary/: client.rs  group_message.rs  mod.rs  publisher.rs
monad-raptorcast/tests/: encoder_error.rs  raptorcast_instance.rs  wireauth_raptorcast.rs
monad-raptorcast/tests/common/: mod.rs
monad-router-multi/: Cargo.toml
monad-rpc/: Cargo.toml
monad-scripts/prepare-sdk/: CMakeLists.txt  build-event-ring.rs  build-exec-events.rs  prepare-sdk.py
monad-secp/: Cargo.toml
monad-state-backend/: Cargo.toml
monad-state-backend-cache/: Cargo.toml
monad-statesync/: build.rs
monad-testutil/: Cargo.toml
monad-tracing-timing/: Cargo.toml
monad-triedb/: build.rs
monad-triedb-utils/: Cargo.toml
monad-updaters/: Cargo.toml
monad-validator/: Cargo.toml
monad-version/: Cargo.toml
monad-wal/: Cargo.toml  build.rs
monad-wireauth/: Cargo.toml  README.md
monad-wireauth/benches/: manager_bench.rs
monad-wireauth/examples/: demo.rs
monad-wireauth/src/: api.rs  context.rs  cookie.rs  error.rs  filter.rs  lib.rs  metrics.rs  state.rs
monad-wireauth/src/config/: mod.rs
monad-wireauth/src/protocol/: common.rs  cookies.rs  crypto.rs  errors.rs  handshake.rs  messages.rs  mod.rs  tai64.rs
monad-wireauth/src/protocol/snapshots/: monad_wireauth__protocol__handshake__tests__complete_handshake_trace.snap  monad_wireauth__protocol__handshake__tests__cookie_handshake_trace.snap  monad_wireauth__protocol__handshake__tests__data_encryption_traces.snap  monad_wireauth__protocol__handshake__tests__multiple_protocol_vectors.snap  monad_wireauth_protocol__handshake__tests__complete_handshake_trace.snap  monad_wireauth_protocol__handshake__tests__cookie_handshake_trace.snap  monad_wireauth_protocol__handshake__tests__data_encryption_traces.snap  monad_wireauth_protocol__handshake__tests__multiple_protocol_vectors.snap
monad-wireauth/src/session/: common.rs  initiator.rs  mod.rs  replay_filter.rs  responder.rs  transport.rs
monad-wireauth/tests/: e2e.rs  tests.rs  two_peer_model.proptest-regressions  two_peer_model.rs
(+415 files in other folders)
