[package]
name = "monad-dataplane"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-types = { workspace = true }

bytes = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
libc = { workspace = true }
monoio = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
ntest = { workspace = true }
rstest = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
env_logger = { workspace = true }
rand = { workspace = true }
futures-util = { workspace = true }
