[package]
name = "monad-exec-events-piql"
version = "0.1.0"
edition = "2024"

[dependencies]
monad-block-capture = { workspace = true }
monad-event-capture = { workspace = true }
monad-exec-events   = { workspace = true }

axum              = { version = "=0.8.3",   default-features = false, features = ["http1", "json", "query", "tokio"] }
clap              = { version = "4.2", features = ["derive"] }
futures           = "0.3"
piql              = { git = "https://github.com/andr-dev/piql.git", rev = "1e5bc409ab00828d2c786d1a2a23c5da221b7501" }
polars            = { version = "=0.50.0", default-features = false, features = ["dtype-array", "dtype-datetime", "dtype-u8", "fmt", "lazy", "timezones", "regex"] }
polars-arrow      = { version = "=0.50.0" }
reqwest           = "0.12.5"
serde             = "1.0"
serde_json        = "1.0"
serde_with        = { version = "=3.16.1", default-features = false, features = ["base64", "macros"] }
simplelog         = "0.12.2"
tokio             = { version = "1.39", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream      = "0.1.17"
tokio-util        = "0.7"
tower-http        = { version = "=0.5.2",   default-features = false, features = ["cors"] }
url               = "2.5.0"
utoipa            = { version = "=5.3.1",   default-features = false, features = ["axum_extras", "macros"] }
utoipa-axum       = { version = "=0.2.0",   default-features = false }
utoipa-swagger-ui = { version = "=9.0.0",   default-features = false, features = ["axum"] }
